--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "Float some text",
   "main": "index.js",
   "scripts": {
-    "prebuild": "rm -rf dist && mkdir dist",
-    "build": "cp index.html dist && exportjs iffy index.js > dist/index.js",
-    "postbuild": "npm run uglify && npm run useref",
-    "test": "standard",
-    "uglify": "uglifyjs dist/index.js -mc > dist/index.min.js",
-    "useref": "replace 'index.js' 'index.min.js' dist/index.html"
+    "build": "./scripts/build.sh",
+    "test": "standard"
   },
   "author": "Tom Vincent <npm@tlvince.com> (https://tlvince.com/)",
   "license": "MIT",
   "devDependencies": {
     "export": "0.1.337",
-    "replace": "0.3.0",
+    "hashmark": "3.1.0",
+    "json": "9.0.3",
+    "replaceinfiles": "1.1.3",
     "standard": "5.4.1",
     "uglify-js": "2.6.1"
   }
