--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "floattext.tlvince.com",
-  "version": "1.0.0",
   "description": "Float some text",
   "main": "index.js",
   "scripts": {
     "build": "./scripts/build.sh",
-    "test": "standard"
+    "test": "standard",
+    "prepublish": "npm run build",
+    "postpublish": "publish-latest -b gh-pages -a dist/",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "author": "Tom Vincent <npm@tlvince.com> (https://tlvince.com/)",
   "license": "MIT",
@@ -13,8 +15,14 @@
     "export": "0.1.337",
     "hashmark": "3.1.0",
     "json": "9.0.3",
+    "publish-latest": "1.1.2",
     "replaceinfiles": "1.1.3",
     "standard": "5.4.1",
-    "uglify-js": "2.6.1"
+    "uglify-js": "2.6.1",
+    "semantic-release": "^4.3.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tlvince/floattext.tlvince.com.git"
   }
 }
