--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "main": "index.js",
   "scripts": {
     "build": "./scripts/build.sh",
+    "predeploy": "./scripts/authorise-push.js",
+    "deploy": "gh-pages-deploy",
     "test": "standard",
     "prepublish": "npm run build",
-    "postpublish": "publish-latest -b gh-pages -a dist/",
+    "postpublish": "npm run deploy",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "author": "Tom Vincent <npm@tlvince.com> (https://tlvince.com/)",
   "license": "MIT",
   "devDependencies": {
     "export": "0.1.337",
+    "gh-pages-deploy": "0.4.0",
     "hashmark": "3.1.0",
     "json": "9.0.3",
-    "publish-latest": "1.1.2",
     "replaceinfiles": "1.1.3",
+    "semantic-release": "^4.3.5",
     "standard": "5.4.1",
-    "uglify-js": "2.6.1",
-    "semantic-release": "^4.3.5"
+    "uglify-js": "2.6.1"
   },
   "repository": {
     "type": "git",
