--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ node_js:
 before_script:
   - npm prune
 after_success:
+  - [[ $TRAVIS_BRANCH == 'master' ]] && npm run build && npm run deploy
   - npm run semantic-release
 branches:
   except:
